--- a/src/app/modules/landing/landing.component.html
+++ b/src/app/modules/landing/landing.component.html
@@ -42,7 +42,7 @@
   </div>
 
   <!-- Header (moved outside the main content for proper layering) -->
-  <div class="fixed left-8 right-8 top-3 z-[100] mx-auto max-w-[1376px]">
+  <div class="fixed left-4 right-8 top-3 z-[100] mx-auto">
     <app-home-header></app-home-header>
   </div>
 </div>
