--- a/src/app/modules/landing/components/home-header/home-header.component.html
+++ b/src/app/modules/landing/components/home-header/home-header.component.html
@@ -1,10 +1,12 @@
 <nav [@headerAnimation]="isHeaderVisible ? 'visible' : 'hidden'"
-  class="left-8 right-8 top-3 z-40 m-auto max-w-[1376px] rounded-2xl rounded-bl-2xl rounded-br-2xl bg-background backdrop-blur-xl md:rounded-full md:border md:border-black/10 md:px-4 md:pl-6 md:transition-all">
-  <div class="mx-auto max-w-7xl px-2 sm:px-4 lg:px-6">
-    <div class="h-2"></div>
+  class="m-auto max-w-[1500px] rounded-2xl rounded-bl-2xl rounded-br-2xl bg-background
+         backdrop-blur-xl md:rounded-full md:border md:border-black/10 md:transition-all py-[10px] px-0
+         shadow-lg shadow-gray-400">
+  <div class="px-2 sm:px-4 lg:px-6">
+    <!-- <div class="h-2"></div> -->
 
     <div class="relative flex h-12 items-center justify-between">
-      <!-- Mobile menu button -->
+      <!-- Mobile menu button -->    
       <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
         <button type="button"
           class="relative inline-flex items-center justify-center rounded-md p-1.5 text-muted-foreground hover:text-primary"
@@ -21,27 +23,48 @@
       </div>
 
       <!-- Logo and Navigation -->
-      <div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
+      <div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start h-full items-center">
         <div class="flex shrink-0 items-center">
           <img class="h-8 w-auto transition-transform duration-200 hover:scale-105" src="assets/images/adsfo_logo.png"
             alt="ADSFO" />
         </div>
 
         <!-- Desktop Navigation -->
-        <div class="hidden sm:ml-4 sm:block">
-          <div class="flex space-x-3">
-            <a *ngFor="let item of navigationItems" [routerLink]="item.path !== '#' ? item.path : null"
-              [href]="item.path === '#' ? '#' : null"
-              class="nav-link relative px-2.5 py-1.5 text-sm font-medium transition-colors hover:text-primary"
-              [ngClass]="{
-                'text-primary dark:text-white': item.active,
-                'text-muted-foreground': !item.active
-              }">
-              {{ item.label }}
-              <span *ngIf="item.active" class="absolute bottom-0 left-0 h-0.5 w-full bg-primary"></span>
-            </a>
+        <div class="hidden sm:ml-4 sm:flex items-center">
+          <div class="flex space-x-3 h-full items-center">
+            <div class="relative group h-full flex items-center" *ngFor="let item of navigationItems">
+              <!-- Mục chính -->
+               <div class="hover:text-primary flex h-full items-center">
+                <a [routerLink]="item.path !== '#' ? item.path : null"
+                    [href]="item.path === '#' ? '#' : null"
+                    class="nav-link relative px-2.5 py-1.5 text-sm font-medium transition-colors hover:text-primary"
+                    [ngClass]="{
+                      'text-primary dark:text-white': item.active,
+                      'text-muted-foreground': !item.active
+                    }">
+                  {{ item.label }}
+                  <span *ngIf="item.active" class="absolute bottom-0 left-0 h-0.5 w-full bg-primary"></span>
+                </a>
+               </div>
+           
+        
+              <!-- Submenu -->
+              <div *ngIf="item.children && item.children.length"
+                   class="absolute top-[40px] left-0 w-48 shadow-lg rounded-lg z-10 hidden group-hover:block pointer-events-none group-hover:pointer-events-auto bg-background">
+                <a *ngFor="let child of item.children" 
+                   (click)="navigateTo(child.path)"
+                   class="block px-4 py-2 text-sm font-medium transition-colors hover:text-primary cursor-pointer"
+                   [ngClass]="{
+                    'text-primary dark:text-white': item.active,
+                    'text-muted-foreground': !item.active
+                  }">
+                  {{ child.label }}
+                </a>
+              </div>
+            </div>
           </div>
         </div>
+        
       </div>
 
       <div class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-4 sm:pr-0">
