--- a/src/app/modules/landing/pages/home/home.component.html
+++ b/src/app/modules/landing/pages/home/home.component.html
@@ -1,6 +1,6 @@
 <!-- Hero -->
 <app-home-hero></app-home-hero>
 <!-- Solution -->
-<app-home-solutions></app-home-solutions>
+<!-- <app-home-solutions></app-home-solutions> -->
 <!-- About Us -->
-<app-home-about-us></app-home-about-us>
+<!-- <app-home-about-us></app-home-about-us> -->
