--- a/src/app/modules/landing/components/home-header/home-header.component.html
+++ b/src/app/modules/landing/components/home-header/home-header.component.html
@@ -25,7 +25,7 @@
       <!-- Logo and Navigation -->
       <div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start h-full items-center">
         <div class="flex shrink-0 items-center">
-          <img class="h-8 w-auto transition-transform duration-200 hover:scale-105" src="assets/images/adsfo_logo.png"
+          <img class="h-8 w-auto transition-transform duration-200 hover:scale-105" src="assets/images/rhino_logo2.png"
             alt="ADSFO" />
         </div>
 
@@ -49,17 +49,30 @@
            
         
               <!-- Submenu -->
-              <div *ngIf="item.children && item.children.length"
-                   class="absolute top-[40px] left-0 w-48 shadow-lg rounded-lg z-10 hidden group-hover:block pointer-events-none group-hover:pointer-events-auto bg-background">
-                <a *ngFor="let child of item.children" 
-                   (click)="navigateTo(child.path)"
-                   class="block px-4 py-2 text-sm font-medium transition-colors hover:text-primary cursor-pointer"
-                   [ngClass]="{
-                    'text-primary dark:text-white': item.active,
-                    'text-muted-foreground': !item.active
-                  }">
-                  {{ child.label }}
-                </a>
+              <div *ngIf="item.children?.length" class="absolute top-[40px] left-0 w-48 shadow-lg rounded-lg z-10 hidden group-hover:block pointer-events-none group-hover:pointer-events-auto bg-background">
+            
+                  <div *ngFor="let child of item.children" 
+                      (click)="navigateTo(child.path)"
+                      class="block px-4 py-2 text-sm font-medium transition-colors hover:text-primary cursor-pointer"
+                      [ngClass]="{
+                        'text-primary dark:text-white': item.active,
+                        'text-muted-foreground': !item.active
+                      }">
+                    <span>{{ child.label }}</span>
+
+                    <!-- Hiển thị menu con nếu có -->
+                    <div *ngIf="child.submenuChild?.length" class="ml-4 pl-2 border-l border-gray-300">
+                      <div *ngFor="let subChild of child.submenuChild" 
+                          (click)="navigateTo(subChild.path, subChild.fragment)"
+                          class="block px-4 py-2 text-sm font-medium transition-colors hover:text-primary cursor-pointer"
+                          [ngClass]="{
+                            'text-primary dark:text-white': item.active,
+                            'text-muted-foreground': !item.active
+                          }">
+                        <span>{{ subChild.label }}</span>
+                      </div>
+                    </div>
+                  </div>
               </div>
             </div>
           </div>
