--- a/src/app/modules/landing/components/home-header/home-header.component.html
+++ b/src/app/modules/landing/components/home-header/home-header.component.html
@@ -61,7 +61,7 @@
                     <span>{{ child.label }}</span>
 
                     <!-- Hiển thị menu con nếu có -->
-                    <div *ngIf="child.submenuChild?.length" class="ml-4 pl-2 border-l border-gray-300">
+                    <!-- <div *ngIf="child.submenuChild?.length" class="ml-4 pl-2 border-l border-gray-300">
                       <div *ngFor="let subChild of child.submenuChild" 
                           (click)="navigateTo(subChild.path, subChild.fragment)"
                           class="block px-4 py-2 text-sm font-medium transition-colors hover:text-primary cursor-pointer"
@@ -71,7 +71,7 @@
                           }">
                         <span>{{ subChild.label }}</span>
                       </div>
-                    </div>
+                    </div> -->
                   </div>
               </div>
             </div>
